BE/error/src/main/java/com/example/demo/auth/application/usecase/WithDrawUsecase.java
package com.example.demo.auth.application.usecase;

public interface WithDrawUsecase {
    void withDraw(String token, Long memberId);
}
